@@ -8,6 +8,8 @@ import lombok.Builder;
 import lombok.Getter;
 import lombok.NoArgsConstructor;
 import lombok.Setter;
+import org.example.tripaicall.openai.dto.Message;
+import org.example.tripaicall.openai.dto.TextMessage;
 
 @Getter
 @Setter
@@ -18,26 +20,31 @@ public class ChatGPTRequest {
     @JsonProperty("model")
     private String model;
     @JsonProperty("messages")
-    private List<RequestMessage> messages;
+    private List<Message> messages;
     @JsonProperty("max_tokens")
     private int maxTokens;
 
     public static ChatGPTRequest createImageRequest(String model, int maxTokens, String role, String requestText, String imageUrl) {
         TextContent textContent = new TextContent("text", requestText);
         ImageContent imageContent = new ImageContent("image_url", new ImageUrl(imageUrl));
-        RequestMessage message = new ImageRequestMessage(role, List.of(textContent, imageContent));
-        return ChatGPTRequest.builder()
-                .model(model)
-                .maxTokens(maxTokens)
-                .messages(Collections.singletonList(message))
-                .build();
+        Message message = new ImageRequestMessage(role, List.of(textContent, imageContent));
+        return createChatGPTRequest(model, maxTokens, Collections.singletonList(message));
     }
 
     public static ChatGPTRequest createTextRequest(String model, int maxTokens, String role, String requestText) {
+        Message message = new TextMessage(role, requestText);
+        return createChatGPTRequest(model, maxTokens, Collections.singletonList(message));
+    }
+
+    public static ChatGPTRequest createChatBotRequest(String model, int maxTokens, List<Message> messages) {
+        return createChatGPTRequest(model, maxTokens, messages);
+    }
+
+    private static ChatGPTRequest createChatGPTRequest(String model, int maxTokens, List<Message> messages) {
         return ChatGPTRequest.builder()
                 .model(model)
                 .maxTokens(maxTokens)
-                .messages(Collections.singletonList(new TextRequestMessage(role, requestText)))
+                .messages(messages)
                 .build();
     }
 }
